add dashboard pages

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -27,10 +27,14 @@
     {{{body}}}
     </main>
 
+
+    <div class="mx-5 flex-row justify-center">
+        <a href="/dashboard/new" class="btn px-5">New Post</a>
+    </div>
     <footer class="flex-row justify-center">
-        <a href="/dashboard/new">New Post</a>
         <h3>&copy; David Belleza</h3>
     </footer>
+
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
     {{/if}}
