--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
     </main>
 
     <footer class="flex-row justify-center">
-        <p>&copy; David Belleza</p>
+        <h3>&copy; David Belleza</h3>
     </footer>
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
