fix views layouts

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -29,7 +29,7 @@
 
 
     <div class="mx-5 flex-row justify-center">
-        <a href="/dashboard/new" class="btn px-5">New Post</a>
+        <a href="/dashboard/new" class="btn"><i class="fas fa-plus mr-2"></i>New Post</a>
     </div>
     <footer class="flex-row justify-center">
         <h3>&copy; David Belleza</h3>
