--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -1,14 +1,18 @@
 <div class="card">
     <div class="card-header">
-        <h3>Create New Post</h3>
+        <h2>Create New Post</h2>
     </div>
     <form id="new-post-form" class="card-body new-post-form">
-        <label for="post-title">Title</label>
-        <input type="text" name="post-title" id="post-title" />
+        <div>
+            <label for="post-title" class="form-label">Title</label>
+            <input type="text" name="post-title" id="post-title" class="form-input"/>
+        </div>
 
-        <label for="post-body">Content</label>
-        <textarea name="post-body" id="post-content" rows="10"></textarea>
-
+        <div>
+            <label for="post-content" class="form-label">Content</label>
+            <textarea name="post-content" id="post-content" class="form-input"></textarea>
+        </div>
+        
         <button type="submit" class="btn">Create</button>
     </form>
 </div>
