--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,13 +1,13 @@
 <div class="card">
     <div class="card-header">
-        <h3>Edit Post</h3>
+        <h2>Edit Post</h2>
     </div>
     <form id="edit-post-form" class="card-body edit-post-form">
-        <label for="post-title">Title</label>
-        <input type="text" name="post-title" id="post-title" value="{{post.title}}"/>
+        <label for="post-title" class="form-label">Title</label>
+        <input type="text" name="post-title" id="post-title" class="form-input" value="{{post.title}}"/>
 
-        <label for="post-body">Content</label>
-        <textarea name="post-body" id="post-content" rows="10">{{post.body}}</textarea>
+        <label for="post-body" class="form-label">Content</label>
+        <textarea name="post-body" id="post-content" class="form-input">{{post.body}}</textarea>
 
         <button type="submit" class="btn">Update</button>
         <button type="button" class="btn delete-post-btn">Delete</button>
