--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -7,9 +7,9 @@
 {{#if loggedIn}}
 <form class="comment-form card">
     <div class="card-body">
-        <label for="comment-body">Comment</label>
-        <textarea name="comment-body" rows="10"></textarea>
-        <button type="submit">Submit</button>
+        <label for="comment-body" class="form-label">Comment</label>
+        <textarea name="comment-body" class="form-input"></textarea>
+        <button type="submit" class="btn">Submit</button>
     </div>
 </form>
 {{/if}}
