edit login and signup pages

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -6,8 +6,8 @@
         <label for="post-title" class="form-label">Title</label>
         <input type="text" name="post-title" id="post-title" class="form-input" value="{{post.title}}"/>
 
-        <label for="post-body" class="form-label">Content</label>
-        <textarea name="post-body" id="post-content" class="form-input">{{post.body}}</textarea>
+        <label for="post-content" class="form-label">Content</label>
+        <textarea name="post-content" id="post-content" class="form-input">{{post.content}}</textarea>
 
         <button type="submit" class="btn">Update</button>
         <button type="button" class="btn delete-post-btn">Delete</button>
