--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,9 +9,9 @@
         <input type="password" id="password-login" />
     </div>
     <div>
-        <button type="submit">login</button>
+        <button type="submit" class="btn">login</button>
     </div>
-    <a type="button" href="/signup">Create account</a>
+    <a type="button" href="/signup" class="mt-3">Create account</a>
 </form>
 
 
