--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,9 +9,9 @@
         <input type="password" id="password-signup" />
     </div>
     <div>
-        <button type="submit">create account</button>
+        <button type="submit" class="btn">create account</button>
     </div>
-    <a type="button" href="/login">Back to login</a>
+    <a type="button" href="/login" class="mt-3">Back to login</a>
 </form>
 
 <script src="/javascript/signup.js"></script>
